fixing the row gap

--- a/a2/style.css
+++ b/a2/style.css
@@ -16,25 +16,19 @@ body {
 }
 
 .black {
-  min-height: 50px;
-  max-height: 100px;
-  min-width: 50px;
-  max-width: 100px;
-  padding: 0px;
-  margin: 0px;
+  height: 50px;
+  width: 50px;
   background-color: black;
-  display: inline-block;
 }
 
 .white {
-  min-height: 50px;
-  max-height: 100px;
-  min-width: 50px;
-  max-width: 100px;
-  padding: 0px;
-  margin: 0px;
+  height: 50px;
+  width: 50px;
   background-color: white;
-  display: inline-block;
+}
+
+.row {
+  display: flex;
 }
 
 #title {
